envoy.yaml
# envoy demo with golang extension enabled
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 18000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.golang
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
              library_id: aws-cloudwatch
              library_path: "/libgo/aws-cloudwatch.so"
              plugin_name: aws-cloudwatch
              plugin_config:
                "@type": type.googleapis.com/xds.type.v3.TypedStruct
                value:
                  region: "ap-northeast-1"
                  metric_namespace: "AWSCloudWatchGolangFilter-dev"
                  metric_name: "RequestCount"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: direct_response
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "OK"
